--- a/.github/workflows/BuildAndTest.yaml
+++ b/.github/workflows/BuildAndTest.yaml
@@ -1,14 +1,13 @@
 name: Build and Test
-on: push
-# on:
-#   push:
-#     branches:
-#       - "**"
-#       - "!main"
-#   pull_request:
-#     branches:
-#       - "**"
-#       - "!main"
+on:
+  push:
+    branches:
+      - "**"
+      - "!main"
+  pull_request:
+    branches:
+      - "**"
+      - "!main"
 jobs:
   build:
     runs-on: ubuntu-latest
