--- a/package.json
+++ b/package.json
@@ -16,18 +16,23 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "react-sortable-tree": "^2.8.0",
     "web-vitals": "^1.0.1"
   },
   "bin": {
     "timesplitter-dev": "server/index.js"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:server": "nodemon ./server ./DevelopmentSampleContent",
+    "start:client": "react-scripts start",
+    "start": "export NODE_ENV=development; concurrently \"npm run start:server\" \"npm run start:client\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "bump": "node bump"
   },
+  "proxy": "http://localhost:4200",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -45,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^6.0.0",
+    "nodemon": "^2.0.7"
   }
 }
