--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "react-sortable-tree": "^2.8.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
   "bin": {
