Moves deps out of production

--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,11 @@
 coverage/
 src/
 public/
+DevelopmentSampleContent/
+.github/
 .gitignore
 bump.js
 package-lock.json
 yarn.lock
 CONTRIBUTING.md
+.env
