--- a/package.json
+++ b/package.json
@@ -11,16 +11,7 @@
     "url": "https://github.com/MoonHighway/timesplitter-dev.git "
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-icons": "^4.2.0",
-    "react-scripts": "4.0.3",
-    "react-sortable-tree": "^2.8.0",
-    "styled-components": "^5.2.1",
-    "web-vitals": "^1.0.1"
+    "express": "^4.17.1"
   },
   "bin": {
     "timesplitter-dev": "server/index.js"
@@ -53,7 +44,17 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "concurrently": "^6.0.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
+    "react-scripts": "4.0.3",
+    "react-sortable-tree": "^2.8.0",
+    "styled-components": "^5.2.1",
+    "web-vitals": "^1.0.1"
   }
 }
