--- a/package.json
+++ b/package.json
@@ -11,23 +11,20 @@
     "url": "https://github.com/MoonHighway/timesplitter-dev.git "
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "express": "^4.17.1"
   },
   "bin": {
     "timesplitter-dev": "server/index.js"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:server": "nodemon ./server ./DevelopmentSampleContent",
+    "start:client": "react-scripts start",
+    "start": "export NODE_ENV=development; concurrently \"npm run start:server\" \"npm run start:client\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "bump": "node bump"
   },
+  "proxy": "http://localhost:4200",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -45,5 +42,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "concurrently": "^6.0.0",
+    "nodemon": "^2.0.7",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
+    "react-scripts": "4.0.3",
+    "react-sortable-tree": "^2.8.0",
+    "styled-components": "^5.2.1",
+    "web-vitals": "^1.0.1"
   }
 }
