--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "deep-equal": "^2.0.5",
     "express": "^4.17.1",
+    "react-minimal-pie-chart": "^8.2.0",
     "react-select": "^4.3.0",
     "rimraf": "^3.0.2"
   },
