--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "timesplitter-dev": "server/index.js"
   },
   "scripts": {
-    "start:server": "nodemon ./server ./DevelopmentSampleContent",
+    "start:server": "nodemon --delay 500ms ./server ./DevelopmentSampleContent",
     "start:client": "react-scripts start",
     "start": "export NODE_ENV=development; concurrently \"npm run start:server\" \"npm run start:client\"",
     "build": "react-scripts build",
