--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "react-minimal-pie-chart": "^8.2.0",
     "react-select": "^4.3.0",
+    "react-simple-checkbox": "^1.3.0",
     "rimraf": "^3.0.2"
   },
   "bin": {
