--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-minimal-pie-chart": "^8.2.0",
     "react-select": "^4.3.0",
     "react-simple-checkbox": "^1.3.0",
+    "react-tabs-adaptive": "^0.1.7",
     "rimraf": "^3.0.2"
   },
   "bin": {
