--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "https://github.com/MoonHighway/timesplitter-dev.git "
   },
   "dependencies": {
+    "debounce": "^1.2.1",
     "deep-equal": "^2.0.5",
     "express": "^4.17.1",
     "react-minimal-pie-chart": "^8.2.0",
@@ -23,7 +24,7 @@
     "timesplitter-dev": "server/index.js"
   },
   "scripts": {
-    "start:server": "nodemon --delay 500ms ./server ./DevelopmentSampleContent",
+    "start:server": "nodemon ./server ./DevelopmentSampleContent",
     "start:client": "react-scripts start",
     "start": "export NODE_ENV=development; concurrently \"npm run start:server\" \"npm run start:client\"",
     "build": "react-scripts build",
@@ -55,7 +56,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.5",
-    "concurrently": "^6.0.2",
+    "concurrently": "^5.0.0",
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
