--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "deep-equal": "^2.0.5",
     "express": "^4.17.2",
     "react-minimal-pie-chart": "^8.2.0",
-    "react-select": "^4.3.0",
+    "react-select": "^5.2.2",
     "react-simple-checkbox": "^1.3.0",
-    "react-tabs-adaptive": "^0.1.7",
-    "rimraf": "^3.0.2"
+    "react-sortable-tree": "^2.8.0",
+    "rimraf": "^3.0.2",
+    "sass": "^1.49.7"
   },
   "bin": {
     "timesplitter-dev": "server/index.js"
@@ -53,17 +54,16 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^13.1.5",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "concurrently": "^7.0.0",
     "nodemon": "^2.0.15",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.2.0",
-    "react-scripts": "4.0.3",
-    "react-sortable-tree": "^2.8.0",
-    "styled-components": "^5.2.3",
+    "react-icons": "^4.3.1",
+    "react-scripts": "^5.0.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   }
 }
